--- a/environment.yml
+++ b/environment.yml
@@ -1,183 +1,19 @@
 name: replay
 channels:
-  - anaconda
-  - conda-forge
   - defaults
 dependencies:
-  - argon2-cffi=20.1.0=py39h2bbff1b_1
-  - async_generator=1.10=pyhd3eb1b0_0
-  - attrs=20.3.0=pyhd3eb1b0_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - blas=1.0=mkl
-  - bleach=3.3.0=pyhd3eb1b0_0
-  - blosc=1.21.0=h19a0ad4_0
-  - bokeh=2.3.0=py39haa95532_0
-  - brotli=1.0.9=ha925a31_2
-  - brotlipy=0.7.0=py39h2bbff1b_1003
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2021.1.19=haa95532_1
-  - certifi=2020.12.5=py39haa95532_0
-  - cffi=1.14.4=py39hcd4344a_0
-  - chardet=4.0.0=py39haa95532_1003
-  - charls=2.1.0=h33f27b4_2
-  - click=7.1.2=pyhd3eb1b0_0
-  - cloudpickle=1.6.0=py_0
-  - colorama=0.4.4=pyhd3eb1b0_0
-  - cryptography=3.3.1=py39hcd4344a_0
-  - cycler=0.10.0=py39haa95532_0
-  - cytoolz=0.11.0=py39h2bbff1b_0
-  - dask=2021.3.0=pyhd3eb1b0_0
-  - dask-core=2021.3.0=pyhd3eb1b0_0
-  - decorator=4.4.2=pyhd3eb1b0_0
-  - defusedxml=0.6.0=pyhd3eb1b0_0
-  - distributed=2021.3.0=py39haa95532_0
-  - entrypoints=0.3=py39haa95532_0
-  - freetype=2.10.4=hd328e21_0
-  - fsspec=0.8.3=py_0
-  - giflib=5.2.1=h62dcd97_0
-  - h5py=2.10.0=py39hc0c1f7e_0
-  - hdf5=1.10.6=h7ebc959_0
-  - hdf5storage=0.1.15=py_1
-  - heapdict=1.0.1=py_0
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=58.2=ha925a31_3
-  - idna=2.10=pyhd3eb1b0_0
-  - imagecodecs=2021.1.11=py39h5da4933_1
-  - imageio=2.9.0=py_0
-  - importlib-metadata=2.0.0=py_1
-  - importlib_metadata=2.0.0=1
-  - intel-openmp=2020.2=254
-  - ipykernel=5.3.4=py39h7b7c402_0
-  - ipython=7.20.0=py39hd4e2768_1
-  - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - jedi=0.17.2=py39haa95532_1
-  - jinja2=2.11.3=pyhd3eb1b0_0
-  - joblib=0.17.0=py_0
-  - jpeg=9b=hb83a4c4_2
-  - json5=0.9.5=py_0
-  - jsonschema=3.2.0=py_2
-  - jupyter_client=6.1.7=py_0
-  - jupyter_core=4.7.1=py39haa95532_0
-  - jupyterlab=2.2.6=py_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=1.2.0=py_0
-  - kiwisolver=1.3.1=py39hd77b12b_0
-  - lcms2=2.11=hc51a39a_0
-  - lerc=2.2.1=hd77b12b_0
-  - libaec=1.0.4=h33f27b4_1
-  - libdeflate=1.7=h2bbff1b_5
-  - libpng=1.6.37=h2a8f88b_0
-  - libsodium=1.0.18=h62dcd97_0
-  - libtiff=4.1.0=h56a325e_1
-  - libzopfli=1.0.3=ha925a31_0
-  - locket=0.2.1=py39haa95532_1
-  - lz4-c=1.9.3=h2bbff1b_0
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=1.1.1=py39h2bbff1b_0
-  - mistune=0.8.4=py39h2bbff1b_1000
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py39h196d8e1_0
-  - mkl_fft=1.0.6=py39h054117c_0
-  - mkl_random=1.0.2=py39h848d8c7_0
-  - msgpack-python=1.0.2=py39h59b6b97_1
-  - msys2-conda-epoch=20160418=1
-  - natsort=7.1.1=pyhd8ed1ab_0
-  - nbclient=0.5.1=py_0
-  - nbconvert=6.0.7=py39haa95532_0
-  - nbformat=5.1.2=pyhd3eb1b0_1
-  - nest-asyncio=1.4.3=pyhd3eb1b0_0
-  - networkx=2.5=py_0
-  - notebook=6.2.0=py39haa95532_0
-  - olefile=0.46=py_0
-  - openjpeg=2.3.0=h5ec785f_1
-  - openssl=1.1.1j=h2bbff1b_0
-  - packaging=20.9=pyhd3eb1b0_0
-  - pandas=1.2.1=py39hf11a4ad_0
-  - pandoc=2.11=h9490d1a_0
-  - pandocfilters=1.4.3=py39haa95532_1
-  - parso=0.7.0=py_0
-  - partd=1.1.0=py_0
-  - patsy=0.5.1=py39haa95532_0
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=8.1.0=py39h4fa10fc_0
-  - pip=20.3.3=py39haa95532_0
-  - prometheus_client=0.9.0=pyhd3eb1b0_0
-  - prompt-toolkit=3.0.8=py_0
-  - psutil=5.8.0=py39h2bbff1b_1
-  - pycparser=2.20=py_2
-  - pygments=2.7.4=pyhd3eb1b0_0
-  - pyopenssl=20.0.1=pyhd3eb1b0_1
-  - pyparsing=2.4.7=pyhd3eb1b0_0
-  - pyqt=5.9.2=py39hd77b12b_6
-  - pyreadline=2.1=py39haa95532_1
-  - pyrsistent=0.17.3=py39h2bbff1b_0
-  - pysocks=1.7.1=py39haa95532_0
-  - python=3.9.1=h6244533_2
-  - python-dateutil=2.8.1=pyhd3eb1b0_0
-  - python_abi=3.9=1_cp39
-  - pytz=2021.1=pyhd3eb1b0_0
-  - pywavelets=1.1.1=py39h080aedc_4
-  - pywin32=228=py39he774522_0
-  - pywinpty=0.5.7=py39haa95532_0
-  - pyyaml=5.4.1=py39h2bbff1b_1
-  - pyzmq=20.0.0=py39hd77b12b_1
-  - qt=5.9.7=vc14h73c81de_0
-  - requests=2.25.1=pyhd3eb1b0_0
-  - scikit-image=0.17.2=py39hf11a4ad_0
-  - scikit-learn=0.23.2=py39hf11a4ad_0
-  - scipy=1.6.0=py39h14eb087_0
-  - seaborn=0.11.1=pyhd3eb1b0_0
-  - send2trash=1.5.0=pyhd3eb1b0_1
-  - setuptools=52.0.0=py39haa95532_0
-  - sip=4.19.13=py39hd77b12b_0
-  - six=1.15.0=py39haa95532_0
-  - snappy=1.1.8=h33f27b4_0
-  - sortedcontainers=2.3.0=pyhd3eb1b0_0
-  - sqlite=3.33.0=h2a8f88b_0
-  - statsmodels=0.12.2=py39h2bbff1b_0
-  - tblib=1.7.0=py_0
-  - terminado=0.9.2=py39haa95532_0
-  - testpath=0.4.4=pyhd3eb1b0_0
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - tifffile=2021.3.5=pyhd3eb1b0_1
-  - tk=8.6.10=he774522_0
-  - toolz=0.11.1=pyhd3eb1b0_0
-  - tornado=6.1=py39h2bbff1b_0
-  - traitlets=5.0.5=pyhd3eb1b0_0
-  - typing_extensions=3.7.4.3=pyha847dfd_0
-  - tzdata=2020f=h52ac0ba_0
-  - urllib3=1.26.3=pyhd3eb1b0_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wcwidth=0.2.5=py_0
-  - webencodings=0.5.1=py39haa95532_1
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - win_inet_pton=1.1.0=py39haa95532_0
-  - wincertstore=0.2=py39h2bbff1b_0
-  - winpty=0.4.3=4
-  - xmltodict=0.12.0=py_0
-  - xz=5.2.5=h62dcd97_0
-  - yaml=0.2.5=he774522_0
-  - zeromq=4.3.3=ha925a31_3
-  - zfp=0.5.5=hd77b12b_4
-  - zict=2.0.0=pyhd3eb1b0_0
-  - zipp=3.4.0=pyhd3eb1b0_0
-  - zlib=1.2.11=h62dcd97_4
-  - zstd=1.4.5=h04227a9_0
-  - pip:
-    - dill==0.3.3
-    - matplotlib==3.4.1
-    - more-itertools==8.7.0
-    - nelpy==0.2.1
-    - neurodsp==2.1.0
-    - numpy==1.20.1
-    - nxviz==0.6.3
-    - opencv-python==4.5.1.48
-    - palettable==3.3.0
-    - tqdm==4.56.2
+  - python=3.9
+  - h5py
+  - seaborn
+  - jupyterlab
+  - hdf5
+  - scikit-learn
+  - natsort
+  - xmltodict
+  - hdf5storage
+  - statsmodels
+  - scikit-image
+  - distributed
+  - dask
 prefix: D:\ryanh\Anaconda3\envs\replay
 
